css/main.css
html, body {
	background-size: cover;
	background-color: #421f4d;
    height: 100%;
    width: 100%;
    margin: 0px;
}

.text-center {
	text-align: center;
	margin-top: 20vw;
	transition: 0.5s;
}

.text-center h1 {
	color:  #e6d1f1;
}

.hilt {
    height: 25px;
    margin-top: 33px;
    margin-left: -2px;
    border-color: rgba(216, 199, 224, 0.75);
    border-width: 6px;
    background: rgba(216, 199, 224, 0.75);
    width: 5px;
    position: absolute;
    transform: rotate(-45deg);
    transition: 0.5s;
    border-radius: 50%;
}

.hilt-back {
	transition: 0.5s;
}

.hilt-back.on {
    height: 25px;
	 margin-top: 13px;
    margin-left: -24px;
    border-color: rgba(216, 199, 224, 0.75);
    border-width: 6px;
    background: rgba(216, 199, 224, 0.75);
    width: 5px;
    position: absolute;
    transform: rotate(45deg);
    border-radius: 50%;
    cursor: pointer;
}

.hilt.on {
	margin-top: 13px;
   margin-left: -24px;
   cursor: pointer;
}

.search-me{
    padding: 10px 20px;
    border-radius: 30px;
    border-color: rgba(216, 199, 224, 0.75);
    border-width: 6px;
    border-style: solid;
    background: rgba(126, 104, 128, 0.82);
    color: #fff;
    width: 0px;
    transition: 0.5s;
    cursor: pointer;
    outline: none;
}


.search-me.on {
	padding: 10px 20px;
    border-radius: 20px;
    border-color: rgba(216, 199, 224, 0.75);
    border-width: 6px;
    border-style: solid;
    background: rgba(126, 104, 128, 0.82);
    width: 200px;
    color: #fff;
    cursor: text;
}

